WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302779
[GStreamer] Ambiguous calls to gst_check_version when building with current GStreamer git main
https://bugs.webkit.org/show_bug.cgi?id=302779
Summary
[GStreamer] Ambiguous calls to gst_check_version when building with current G...
Philippe Normand
Reported
2025-11-19 05:22:01 PST
/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:1120:9: error: call to 'gst_check_version' is ambiguous 1120 | if (gst_check_version(1, 22, 0)) | ^~~~~~~~~~~~~~~~~ /var/home/phil/WebKit/local-projects/subprojects/gstreamer-full/subprojects/gstreamer/gst/gst.h:133:10: note: candidate function 133 | gboolean gst_check_version (guint major, guint minor, guint micro); | ^ /var/home/phil/WebKit/Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:58:13: note: candidate function 58 | inline bool gst_check_version(guint major, guint minor, guint micro) | ^ 1 error generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-11-19 05:25:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54175
EWS
Comment 2
2025-11-20 03:26:16 PST
Committed
303321@main
(52ba2a4f5ff5): <
https://commits.webkit.org/303321@main
> Reviewed commits have been landed. Closing PR #54175 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-11-20 03:27:14 PST
<
rdar://problem/165121446
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug