[GStreamer] Ambiguous calls to gst_check_version when building with current GStreamer git main https://bugs.webkit.org/show_bug.cgi?id=302779

Reviewed by Xabier Rodriguez-Calvar.

GStreamer 1.28.0 hasn't been released yet, so until then check with the development version,
currently at 1.27.2.1.

* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:

Canonical link: https://commits.webkit.org/303321@main